[tool.black]
line-length = 99
# NB: this can only be updated once black supports the target python version,
# so may lag behind the version of python we're using. This shouldn't matter
# unless we're using completely new syntax:
target-version = ['py311']
exclude = "^.*/migrations/.*$|kitsune/sumo/db_strings.py"

[tool.poetry]
name = "kitsune"
version = "0.1.0"
description = "Mozilla Support Platform"
authors = ["Your Name <you@example.com>"]
license = "BSD 3-Clause"

[tool.poetry.dependencies]
python = "^3.11"
APScheduler = "^3.10.0"
Django = "4.1.13"
babis = "^0.2.4"
Pillow = "^10.1.0"
bleach = {version = "^6.0.0", extras = ["css"]}
boto3 = "^1.26.63"
celery = "5.2.7"
dennis = "^1.1.0"
mozilla-django-oidc = "^3.0.0"
dj-database-url = "^1.2.0"
django-jinja = "^2.10.2"
lxml = "^4.9.2"
elasticsearch = "^7.17.9"
elasticsearch-dsl = "^7.4.0"
gunicorn = "^20.1.0"
gevent = "^23.9.1"
newrelic = "^8.5.0"
django-waffle = "^3.0.0"
python-decouple = "^3.7"
sentry-sdk = "^1.32.0"
whitenoise = "^6.3.0"
zenpy = "^2.0.25"
idna = "^3.4"
django-allow-cidr = "^0.6.0"
html5lib = "^1.1"
py-wikimarkup = "^2.3.0"
python-dateutil = "^2.8.2"
python-memcached = "^1.59"
redis = "^4.5.4"
django-cors-headers = "^3.13.0"
django-enforce-host = "^1.1.0"
django-cache-url = "^3.4.4"
django-extensions = "^3.2.1"
django-filter = "^22.1"
django-redis = "^5.2.0"
factory-boy = "^3.2.1"
Faker = "^16.6.1"
google-api-python-client = "^2.76.0"
timeout-decorator = "^0.5.0"
simplejson = "^3.18.1"
twython = "^3.9.1"
translate-toolkit = "^3.8.3"
django-ratelimit = "^4.0.0"
django-storages = {version = "^1.13.2", extras = ["google"]}
django-taggit = "^3.1.0"
django-user-agents = "^0.4.0"
django-watchman = "1.3.0"
premailer = "^3.10.0"
pyquery = "^2.0.0"
parameterized = "^0.8.1"
Werkzeug = "3.0.1"
commonware = "^0.6.0"
django-statici18n = "^2.3.1"
django-timezone-field = "^5.0"
djangorestframework = "^3.14.0"
django-activity-stream = "^1.4.2"
django-jsonfield-compat = "^0.4.4"
django-jsonfield-backport = "^1.0.5"
cffi = "^1.15.1"
django-mozilla-product-details = "^1.0.3"
PyMySQL = "^1.0.2"
django-csp = "^3.7"
oauthlib = "^3.2.2"
protobuf = "^4.21.12"
Babel = "^2.11.0"
Jinja2 = "^3.1.2"
google-auth = "^2.16.0"
graphene-django = "~3.0.0"
django-guardian = "^2.4.0"
django-email-bandit = "^2.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.11"
isort = "^5.12.0"
pep8 = "^1.7.1"
appnope = "^0.1.3"
argparse = "^1.4.0"
django-debug-toolbar = "^3.8.1"
django-cache-panel = "^0.1"
jsonschema = "^4.17.3"
pre-commit = "^3.0.3"
q = "^2.7"
pylint = "^2.16.1"
debugpy = "^1.6.6"
flake8 = "^6.0.0"
urlwait = "^1.0"
testfixtures = "^7.0.4"
sphinx-rtd-theme = "^1.1.1"
sphinx = "^5.3.0"
recommonmark = "^0.7.1"
sphinxcontrib-httpdomain = "^1.8.1"
tabulate = "^0.9.0"
pylint-django = "^2.5.3"
rope = "^1.7.0"
black = "^23.1.0"
pytest = "^7.3.1"
selenium = "^4.8.3"
webdriver-manager = "^3.8.6"
pytest-html = "^3.2.0"
pytest-xdist = "^3.2.1"
docker = "^6.0.1"
pytest-rerunfailures = "^12.0"
pytest-check = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
