[tool.black]
line-length = 99
# NB: this can only be updated once black supports the target python version,
# so may lag behind the version of python we're using. This shouldn't matter
# unless we're using completely new syntax:
target-version = ['py311']
exclude = "^.*/migrations/.*$|kitsune/sumo/db_strings.py"

[tool.poetry]
name = "kitsune"
version = "0.1.0"
description = "Mozilla Support Platform"
authors = ["Your Name <you@example.com>"]
license = "BSD 3-Clause"

[tool.poetry.dependencies]
python = "^3.11"
APScheduler = "^3.10.4"
Django = "^4.2.15"
babis = "^0.2.4"
Pillow = "^9.5.0"
bleach = {version = "^6.1.0", extras = ["css"]}
boto3 = "^1.34.17"
celery = "5.2.7"
dennis = "^1.1.0"
mozilla-django-oidc = "4.0.0"
dj-database-url = "^1.3.0"
django-jinja = "^2.11.0"
lxml = "^4.9.4"
elasticsearch = "^7.17.9"
elasticsearch-dsl = "^7.4.1"
gunicorn = "^22.0.0"
gevent = "^23.9.1"
newrelic = "^9.5.0"
django-waffle = "^3.0.0"
python-decouple = "^3.8"
sentry-sdk = "^2.8.0"
whitenoise = "^6.6.0"
zenpy = "^2.0.47"
idna = "^3.7"
django-allow-cidr = "^0.6.0"
html5lib = "^1.1"
py-wikimarkup = "^2.3.0"
python-dateutil = "^2.8.2"
python-memcached = "^1.61"
redis = "^4.6.0"
django-cors-headers = "^3.14.0"
django-enforce-host = "^1.1.0"
django-cache-url = "^3.4.5"
django-extensions = "^3.2.3"
django-filter = "^23.5"
django-redis = "^5.4.0"
factory-boy = "^3.3.0"
Faker = "^16.9.0"
simplejson = "^3.19.2"
twython = "^3.9.1"
translate-toolkit = "^3.12.1"
django-ratelimit = "^4.1.0"
django-storages = {version = "^1.14.2", extras = ["google"]}
django-taggit = "5.0.1"
django-user-agents = "^0.4.0"
django-watchman = "1.3.0"
premailer = "^3.10.0"
pyquery = "^2.0.0"
parameterized = "^0.8.1"
Werkzeug = "3.0.3"
commonware = "^0.6.0"
django-statici18n = "^2.4.0"
django-timezone-field = "^5.1"
djangorestframework = "^3.15.2"
django-activity-stream = "^1.4.2"
django-jsonfield-compat = "^0.4.4"
django-jsonfield-backport = "^1.0.5"
cffi = "^1.16.0"
django-mozilla-product-details = "^1.0.3"
django-csp = "3.8rc"
oauthlib = "^3.2.2"
protobuf = "^4.25.2"
Babel = "^2.14.0"
Jinja2 = "^3.1.4"
google-auth = "^2.26.2"
graphene-django = "^3.2.0"
django-guardian = "^2.4.0"
django-email-bandit = "^2.0"
psycopg2 = "^2.9.9"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
dockerflow = "^2022.8.0"
google-analytics-data = "0.18.7"
pyparsing = "3.1.2"
wagtail = "6.1.3"
wagtail-localize = "1.9"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.11"
isort = "^5.13.2"
pep8 = "^1.7.1"
appnope = "^0.1.3"
argparse = "^1.4.0"
django-debug-toolbar = "^3.8.1"
django-cache-panel = "^0.1"
jsonschema = "^4.20.0"
pre-commit = "^3.6.0"
q = "^2.7"
pylint = "^2.17.7"
debugpy = "^1.8.0"
urlwait = "^1.0"
testfixtures = "^7.2.2"
sphinx-rtd-theme = "^1.3.0"
sphinx = "^5.3.0"
recommonmark = "^0.7.1"
sphinxcontrib-httpdomain = "^1.8.1"
tabulate = "^0.9.0"
pylint-django = "^2.5.5"
rope = "^1.11.0"
black = "^24.3.0"
pytest = "^7.4.4"
pytest-html = "^3.2.0"
pytest-xdist = "^3.5.0"
docker = "^6.1.3"
pytest-rerunfailures = "^12.0"
flake8 = "^7.0.0"
pytest-check = "^2.3.1"
allure-pytest = "^2.13.2"
playwright = "^1.45.0"
pytest-playwright = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
